<resources>
    <string name="app_name">AppForFlexible</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1782000125350579</string>
    <string name="title_activity_custom_view">CustomView</string>

    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="image">ImageBtn</string>
    <string name="photo">Photo</string>
    <string name="opacity">Opacity</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_share">ShareActivity</string>

</resources>
